Add social media icons

--- a/bronwyndouglas.html
+++ b/bronwyndouglas.html
@@ -23,7 +23,15 @@
 	<div id="main">
 		<h2>Bronwyn Douglas - Vocal (Soprano)</h2>
 		<section id="artist-image-and-contact">
-			<img src="BronwynDouglass01.jpg" title="Bronwyn Douglas" alt="Bronwyn Douglas" id="artistimage">
+			<img src="BronwynDouglass01.jpg" title="Bronwyn Douglas" alt="Bronwyn Douglas" id="artistimage" width="192" height="250">
+			<h3 class="socialmediamessage">Follow Bronwyn</h3>
+			<div id="socialmedialinks">
+				<img src="social_media_icons/LinkedIn_R_29px.png" title="LinkedIn" alt="LinkedIn Logo" class="socialmediaicon" width="37" height="28">
+			
+				<img src="social_media_icons/FB_Logo__Blue_29px.png" title="Facebook" alt="Facebook Logo" class="socialmediaicon" width="29" height="29">
+			
+				<img src="social_media_icons/Twitter_Social_Icon_Square_Color_29px.png" title="Twitter" alt="Twitter Logo" class="socialmediaicon" width="29" height="29">
+			</div>
 		</section>
 		<section id="artist-information">
 			<h3>About Bronwyn</h3>
