--- a/bronwyndouglas.html
+++ b/bronwyndouglas.html
@@ -35,17 +35,24 @@
 		</section>	<!-- End of Artist Contact & Image Section -->
 		<section id="artist-information">
 			<section id="about" class="artist-info-section">
-				<h3 class="artistheading">About Bronwyn</h3>
+				<h3>About Bronwyn</h3>
 				<p>Bronwyn is a Mezzo-soprano from Milton, NSW. She is currently the holder of the Amelia Joscelyne Memorial Schoarship with the Dame Nellie Melba Trust.</p>
 				<p>Bronwyn graduated with a Masters in Operatic Performance from the Queensland Conservatorium in 2014, also receiving ab award for Academic Excellence and the Wagner Society Encouragement Award. She attended the Lisa Gasteen National Opera School from 2013 – 2015 as well as undertaking the Mediterranean Opera Studio Programme held in Caltigirone in Sicily.</p>
 			</section>	<!-- End of About Artist Section -->
 			<section id="performances" class="artist-info-section">
-				<h3 class="artistheading">Performances</h3>
-				<h4><a href="linktoconcertpage">BRO CONCERT NAME</a></h4>
+				<h3>Performances</h3>
+				<h4>The Barrier Reef Orchestra</h4>
+				<a href="variety-t150concert-link" class="concert-button">
+				<div class="concert-link-div">
+					<h5 class="concert-title">The Townsville T150 Variety Concert</h5>
+					<p class="concert-info">The concert is part of Townsville’s 150th anniversary celebrations. It will feature a variety of homegrown talent, including ARIA Award-winning performer David Campbell, Dirty Dancing musical star Kurt Phelan, The Voice Australia’s Luke Kennedy and many more.</p>
+				</div>
+				</a>
+				<h4>Other</h4>
 				<p>Bronwyn has performed many operatic roles in Queensland and New South Wales. She has also performed as the Alto Soloist for the Queeensland Symphony Orchestra for their 2015 Performance of the Messiah and in Vivaldi’s Gloria for the 4MBS Festival of classics in 2014.</p>
 			</section>	<!-- End of Performances Section -->
 			<section id="awards" class="artist-info-section">
-				<h3 class="artistheading">Awards</h3>
+				<h3>Awards</h3>
 				<p>Bronwyn has received many awards, a Finalist in the Sun aria in 2015,winner of the Royal Melbourne Philharmonic Aria in 2015. She has also been placed in several competitions. In 2015 she was awarded the Champion of Champions Vocal Soloist at the North Queensland Eisteddfod and that year also won the Open Vocal Solo at the Australian Concerto and Vocal Competition. As part of that award she sang with the Barrier Reef Orchestra at the T150 Concert.</p>
 			</section>	<!-- End of Awards Section -->
 		</section>	<!-- End of Artist Information Section -->
