Add V1 of Sponor Banner

--- a/bronwyndouglas.html
+++ b/bronwyndouglas.html
@@ -42,8 +42,8 @@
 			<section id="performances" class="artist-info-section">
 				<h3>Performances</h3>
 				<h4>The Barrier Reef Orchestra</h4>
-				<a href="variety-t150concert-link" class="concert-button">
-				<div class="concert-link-div">
+				<a href="variety-t150concert-link" class="concert-button-link">
+				<div class="concert-button">
 					<h5 class="concert-title">The Townsville T150 Variety Concert</h5>
 					<p class="concert-info">The concert is part of Townsville’s 150th anniversary celebrations. It will feature a variety of homegrown talent, including ARIA Award-winning performer David Campbell, Dirty Dancing musical star Kurt Phelan, The Voice Australia’s Luke Kennedy and many more.</p>
 				</div>
@@ -56,6 +56,20 @@
 				<p>Bronwyn has received many awards, a Finalist in the Sun aria in 2015,winner of the Royal Melbourne Philharmonic Aria in 2015. She has also been placed in several competitions. In 2015 she was awarded the Champion of Champions Vocal Soloist at the North Queensland Eisteddfod and that year also won the Open Vocal Solo at the Australian Concerto and Vocal Competition. As part of that award she sang with the Barrier Reef Orchestra at the T150 Concert.</p>
 			</section>	<!-- End of Awards Section -->
 		</section>	<!-- End of Artist Information Section -->
-	</div>
+	</div> <!-- End of Main -->
+	<footer id="footer">
+		<aside id="sponsors">
+						
+		</aside>
+		<div id="footer-sponor-row">
+			<img src="sponors.png" title="Barrier Reef Orchestra's Sponors" alt="Our Sponors" height="100">	
+		</div>	<!-- End of Sponor Row -->
+		<div id="footer-middle-column">
+			
+		</div>	<!-- End of Middle Column -->
+		<div id="footer-right-column">
+			
+		</div>	<!-- End of Right Column -->
+	</footer>
 </body>
 </html>
