Add form buttons to footer

--- a/bronwyndouglas.html
+++ b/bronwyndouglas.html
@@ -62,14 +62,15 @@
 						
 		</aside>
 		<div id="footer-sponor-row">
-			<img src="sponors.png" title="Barrier Reef Orchestra's Sponors" alt="Our Sponors" height="100">	
+			<img src="sponors_attempted_responsive.png" title="Barrier Reef Orchestra's Sponors" alt="Our Sponors">	
 		</div>	<!-- End of Sponor Row -->
-		<div id="footer-middle-column">
-			
+		<div id="footer-form-row">
+			<ul>
+				<li>Membership Form</li>
+				<li>Player Registration Form</li>
+				<li>Benefactor's Form (Donatations)</li>
+			</ul>
 		</div>	<!-- End of Middle Column -->
-		<div id="footer-right-column">
-			
-		</div>	<!-- End of Right Column -->
 	</footer>
 </body>
 </html>
