Add sponor images to folders

--- a/bronwyndouglas.html
+++ b/bronwyndouglas.html
@@ -27,6 +27,14 @@
 				<li><a href="#">Contact Us</a></li>
 			</ul>
 		</nav>
+		<section id="breadcrumb-nav">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Our Team</a></li>
+				<li><a href="#">Artists</a></li>
+				<li><a href="#">Bronwyn Douglas</a></li>
+			</ul>
+		</section>
 	</header>
 	<div id="main">
 		<h2>Bronwyn Douglas - Vocal (Soprano)</h2>
@@ -50,12 +58,19 @@
 			<section id="performances" class="artist-info-section">
 				<h3>Performances</h3>
 				<h4>The Barrier Reef Orchestra</h4>
-				<a href="variety-t150concert-link" class="concert-button-link">
-				<div class="concert-button">
-					<h5 class="concert-title">The Townsville T150 Variety Concert</h5>
-					<p class="concert-info">The concert is part of Townsville’s 150th anniversary celebrations. It will feature a variety of homegrown talent, including ARIA Award-winning performer David Campbell, Dirty Dancing musical star Kurt Phelan, The Voice Australia’s Luke Kennedy and many more.</p>
-				</div>
-				</a>
+				<div class="concert-overview">	<!-- Tobi Is Fixing This -->
+					<div class="concert-title-date">
+						<h5 class="concert-title">The Townsville T150 Variety Concert</h5>
+						<h6 class="concert-location">Location: Civic Theatre</h6>
+						<h6 class="concert-date">Date: 02/04/2016, 7:30pm</h6>
+					</div>
+					<div class="concert-summary">	<!-- Tobi Is Fixing This -->
+						<p class="concert-summary-text">The concert is part of Townsville’s 150th anniversary celebrations. It will feature a variety of homegrown talent, including ARIA Award-winning performer David Campbell, Dirty Dancing musical star Kurt Phelan, The Voice Australia’s Luke Kennedy and many more.</p>
+					</div>
+					<div class="concert-page-button">	<!-- Tobi Is Fixing This -->
+						<a href="#">Go To Concert Page</a>
+					</div>
+				</div>	<!-- End of Concert Overview -->
 				<h4>Other</h4>
 				<p>Bronwyn has performed many operatic roles in Queensland and New South Wales. She has also performed as the Alto Soloist for the Queeensland Symphony Orchestra for their 2015 Performance of the Messiah and in Vivaldi’s Gloria for the 4MBS Festival of classics in 2014.</p>
 			</section>	<!-- End of Performances Section -->
@@ -66,19 +81,23 @@
 		</section>	<!-- End of Artist Information Section -->
 	</div> <!-- End of Main -->
 	<footer id="footer">
+   		<div class="footerline"></div>	<!-- Line for the top of the footer -->
 	   	<div class="container">
-		    <section class="sponors slider">	<!-- The following is from a JS example -->
-				<div class="slide"><img src="https://www.solodev.com/assets/carousel/image1.png"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image2.png"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image3.png"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image4.png"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image5.png"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image6.png"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image7.png"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image8.png"></div>
+	   		<h6 class="footer-title">OUR SPONSORS</h6>
+	   		<img src="Sponsor Image/townsville_city_council_blue.jpg" height="100px" width="100">
+		    <section class="sponsors slider">	<!-- The following is from a JS example -->
+				<div class="slide"><img src="https://www.solodev.com/assets/carousel/image1.png" height="100px" width="100"></div>
+			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image2.png" height="100px" width="100"></div>
+			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image3.png" height="100px" width="150"></div>
+			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image4.png" height="100px" width="400"></div>
+			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image5.png" height="100px" width="200"></div>
+			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image6.png" height="100px" width="300"></div>
+			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image7.png" height="100px" width="100"></div>
+			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image8.png" height="100px" width="100"></div>
 		    </section>		<!-- End of JS example -->
-		</div>	<!-- End of Sponor Div -->
+		</div>	<!-- End of Sponsor Div -->
 		<div id="footer-nav" class="navigation">
+			<h6 class="footer-title">NAVIGATION</h6>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About Us</a></li>
