--- a/bronwyndouglas.html
+++ b/bronwyndouglas.html
@@ -84,16 +84,16 @@
    		<div class="footerline"></div>	<!-- Line for the top of the footer -->
 	   	<div class="container">
 	   		<h6 class="footer-title">OUR SPONSORS</h6>
-	   		<img src="Sponsor Image/townsville_city_council_blue.jpg" height="100px" width="100">
+	   		<img src="Sponor Image - Resized/townsville_city_council_blue.jpg" height="100px" width="100px">
 		    <section class="sponsors slider">	<!-- The following is from a JS example -->
-				<div class="slide"><img src="https://www.solodev.com/assets/carousel/image1.png" height="100px" width="100"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image2.png" height="100px" width="100"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image3.png" height="100px" width="150"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image4.png" height="100px" width="400"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image5.png" height="100px" width="200"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image6.png" height="100px" width="300"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image7.png" height="100px" width="100"></div>
-			    <div class="slide"><img src="https://www.solodev.com/assets/carousel/image8.png" height="100px" width="100"></div>
+				<div class="slide"><img src="Sponor Image - Resized/acvc.png"></div>
+	    		<div class="slide"><img src="Sponor Image - Resized/bunnings.png"></div>
+	    		<div class="slide"><img src="Sponor Image - Resized/signs_of_excellence.png"></div>
+	    		<div class="slide"><img src="Sponor Image - Resized/afcm.png"></div>
+	    		<div class="slide"><img src="Sponor Image - Resized/groovy_graphics.png"></div>
+	    		<div class="slide"><img src="Sponor Image - Resized/keyboard_shop.png"></div>
+	    		<div class="slide"><img src="Sponor Image - Resized/kaptiv_media.png"></div>
+	    		<div class="slide"><img src="Sponor Image - Resized/cowboys_league_club.png"></div>
 		    </section>		<!-- End of JS example -->
 		</div>	<!-- End of Sponsor Div -->
 		<div id="footer-nav" class="navigation">
