--- a/bronwyndouglas.html
+++ b/bronwyndouglas.html
@@ -36,7 +36,7 @@
 			</ul>
 		</section>
 	</header>
-	<div id="main">
+	<div id="main">	<!-- Page is currently a rough outline of the final product, it will be made more like the comp pages in future -->
 		<h2>Bronwyn Douglas - Vocal (Soprano)</h2>
 		<section id="artist-image-and-contact">
 			<img src="BronwynDouglass01.jpg" title="Bronwyn Douglas" alt="Bronwyn Douglas" id="artistimage" width="192" height="250">
@@ -55,6 +55,10 @@
 				<p>Bronwyn is a Mezzo-soprano from Milton, NSW. She is currently the holder of the Amelia Joscelyne Memorial Schoarship with the Dame Nellie Melba Trust.</p>
 				<p>Bronwyn graduated with a Masters in Operatic Performance from the Queensland Conservatorium in 2014, also receiving ab award for Academic Excellence and the Wagner Society Encouragement Award. She attended the Lisa Gasteen National Opera School from 2013 – 2015 as well as undertaking the Mediterranean Opera Studio Programme held in Caltigirone in Sicily.</p>
 			</section>	<!-- End of About Artist Section -->
+			<section id="awards" class="artist-info-section">
+				<h3>Awards</h3>
+				<p>Bronwyn has received many awards, a Finalist in the Sun aria in 2015,winner of the Royal Melbourne Philharmonic Aria in 2015. She has also been placed in several competitions. In 2015 she was awarded the Champion of Champions Vocal Soloist at the North Queensland Eisteddfod and that year also won the Open Vocal Solo at the Australian Concerto and Vocal Competition. As part of that award she sang with the Barrier Reef Orchestra at the T150 Concert.</p>
+			</section>	<!-- End of Awards Section -->
 			<section id="performances" class="artist-info-section">
 				<h3>Performances</h3>
 				<h4>The Barrier Reef Orchestra</h4>
@@ -67,17 +71,22 @@
 					<div class="concert-summary">	<!-- Tobi Is Fixing This -->
 						<p class="concert-summary-text">The concert is part of Townsville’s 150th anniversary celebrations. It will feature a variety of homegrown talent, including ARIA Award-winning performer David Campbell, Dirty Dancing musical star Kurt Phelan, The Voice Australia’s Luke Kennedy and many more.</p>
 					</div>
+					<a href="#">
 					<div class="concert-page-button">	<!-- Tobi Is Fixing This -->
-						<a href="#">Go To Concert Page</a>
-					</div>
+						<p>Go To Concert Page</p>
+					</div></a>
+					<!-- If there were more concerts they would go here and they would be stacked next to each other
+						i.e [CONCERT BOX] [CONCERT BOX]
+							[CONCERT BOX] [CONCERT BOX]
+							 
+						NOT [CONCERT BOX]
+							[CONCERT BOX]
+							[CONCERT BOX]
+							[CONCERT BOX]	
+							-->
+							
 				</div>	<!-- End of Concert Overview -->
-				<h4>Other</h4>
-				<p>Bronwyn has performed many operatic roles in Queensland and New South Wales. She has also performed as the Alto Soloist for the Queeensland Symphony Orchestra for their 2015 Performance of the Messiah and in Vivaldi’s Gloria for the 4MBS Festival of classics in 2014.</p>
 			</section>	<!-- End of Performances Section -->
-			<section id="awards" class="artist-info-section">
-				<h3>Awards</h3>
-				<p>Bronwyn has received many awards, a Finalist in the Sun aria in 2015,winner of the Royal Melbourne Philharmonic Aria in 2015. She has also been placed in several competitions. In 2015 she was awarded the Champion of Champions Vocal Soloist at the North Queensland Eisteddfod and that year also won the Open Vocal Solo at the Australian Concerto and Vocal Competition. As part of that award she sang with the Barrier Reef Orchestra at the T150 Concert.</p>
-			</section>	<!-- End of Awards Section -->
 		</section>	<!-- End of Artist Information Section -->
 	</div> <!-- End of Main -->
 	<footer id="footer">
@@ -98,6 +107,7 @@
 		</div>	<!-- End of Sponsor Div -->
 		<div id="footer-nav" class="navigation">
 			<h6 class="footer-title">NAVIGATION</h6>
+			<a href="#" class="tickets-cta">Buy Tickets</a>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About Us</a></li>
@@ -109,6 +119,10 @@
 				<li><a href="#">Contact Us</a></li>
 			</ul>
 		</div>	<!-- End of Footer Nav -->
+		<aside id="copyright">
+			<p id="copyright">©Copyright North Queensland Ensembles Inc. 2017</p>
+		</aside>
+		<div class="footerline"></div>	<!-- Line for the top of the footer -->
 	</footer>
 </body>
 </html>
