Reorganize files, Delete unused files, Update plan

--- a/plan.html
+++ b/plan.html
@@ -1,8 +1,18 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Web Design &amp; Development Milestone 1 Plan</title>
+	<meta charset="utf-8">
+	<title>Web Design &amp; Development Milestone 1 Plan</title>
+	<style type="text/css">	/* Using this just for the table to add column/row seperation */
+		table, th, td {
+			border-left: 1px solid black;
+			border-collapse: collapse;
+		}
+		th, td {
+			padding: 5px 10px;
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
 	<h1>Web Design &amp; Development - Milestone 1 - Project Plan (TEAM 31)</h1>
@@ -11,20 +21,59 @@
 	Due Date: 5/05 5pm.	Extension Due Date: 12/05 5pm. (Granted by Dianna Hardy)
 
 	<h2>Goals</h2>
-		<p>The goal of the website is to increase the number of attendees at Barrier Reef Orchestra concerts &amp; events.</p>
+		<p>The goal of the website is to increase the number of attendees at Barrier Reef Orchestra concerts &amp; events by 25%.</p>
 
 	<h2>Success Evaluation</h2>
-		<p>The site's success will be determined by the number of new members that sign up through the website, and an increase in the number of attendees and/or ticket sales for orchestra concerts &amp; events.</p>
+		<p>The sites success will be determined by the number of new members that sign up through the website, and an increase in the number of attendees and/or ticket sales for orchestra concerts &amp; events by 25%.</p>
 
 
 	<h2>Target Audience</h2>
-		<p>The target auidence of the website is young adults aged 15 - 30 interested in orchestral music. The website will be designed to appeal to this auidence by having facebook integration, using lighter colors (Blues, Whites, etc). The current comps were influenced by the designs of the State Youth Orchestra websites (i.e. QSO, ASO).</p>
+		<p>The target auidence of the website is young adults aged 20 - 35 interested in orchestral music. The website will be designed to appeal to this auidence by having facebook integration, using lighter colors (Blues, Whites, etc). The current comps were influenced by the designs of the State Youth Orchestra websites
+		(i.e. Sydney Youth Orchestra, etc.) and the State Orchestra Websites (i.e. Queensland Symphony Orchestra, etc.).</p>
 
-
+	<h2>Content</h2>
+		<table>
+		<tr>
+			<th>About Us</th>
+			<th>Our Team</th>
+			<th>Events</th>
+			<th>Images</th>
+			<th>News</th>
+			<th>Support Us</th>
+			<th>Contact Us</th>
+		</tr>
+		<tr>
+			<td>About The Orchestra</td>
+			<td>Committee Members</td>
+			<td>Future Concerts</td>
+			<td>Galleries for Concerts</td>
+			<td>Announcements</td>
+			<td>Membership Sign Up</td>
+			<td>Phone, Email, Address Information</td>
+		</tr>
+		<tr>
+			<td>The History of the Orchestra(2003-2015)</td>
+			<td>Guest Artists &amp; Conductors</td>
+			<td>Past Concerts</td>
+			<td></td>
+			<td>Past Announcements</td>
+			<td>Benefactor Sign Up</td>
+			<td>Google Maps</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td>Life Members</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td>Benefactor Sign Up</td>
+			<td>Contact Us Form</td>
+		</tr>
+		</table>
 	<h2>Site Flowchart</h2>
-		<img src="../site_flowchart.png"/>
+		<img src="Site Flowchart.png"/>
 
 	<h2>GitHub Repository</h2>
-		<a href="https://github.com/BradmanLD/">https://github.com/BradmanLD/FILL THIS IN******</a>
+		<a href="https://github.com/BradmanLD/Assignment2---CP1806---Group-Website">https://github.com/BradmanLD/Assignment2---CP1806---Group-Website</a>
 </body>
 </html>
