Further reorganize content

--- a/WEBSITE/bronwyndouglas.html
+++ b/WEBSITE/bronwyndouglas.html
@@ -39,7 +39,7 @@
 	<div id="main">	<!-- Page is currently a rough outline of the final product, it will be made more like the comp pages in future -->
 		<h2>Bronwyn Douglas - Vocal (Soprano)</h2>
 		<section id="artist-image-and-contact">
-			<img src="BronwynDouglass01.jpg" title="Bronwyn Douglas" alt="Bronwyn Douglas" id="artistimage" width="192" height="250">
+			<img src="artists/BronwynDouglass01.jpg" title="Bronwyn Douglas" alt="Bronwyn Douglas" id="artistimage" width="192" height="250">
 			<h3 class="socialmediamessage">Follow Bronwyn</h3>
 			<div id="socialmedialinks">
 				<a href="https://www.facebook.com/BronwynDouglassMezzo" target="_blank"><img src="social_media_icons/FB_Logo__Blue_29px.png" title="Facebook" alt="Facebook Logo" class="socialmediaicon" width="29" height="29"></a>
