Export Comps as images

--- a/plan.html
+++ b/plan.html
@@ -65,7 +65,7 @@
 			<td>Life Members</td>
 			<td></td>
 			<td></td>
-			<td></td>
+			<td>Bulletin Board</td>
 			<td>Benefactor Sign Up</td>
 			<td>Contact Us Form</td>
 		</tr>
