Update website images for w3c validation: Remove Space form Image Path, Add alt attributes to images

--- a/WEBSITE/bronwyndouglas.html
+++ b/WEBSITE/bronwyndouglas.html
@@ -27,14 +27,14 @@
 				<li><a href="#">Contact Us</a></li>
 			</ul>
 		</nav>
-		<section id="breadcrumb-nav">
+		<div id="breadcrumb-nav">
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Our Team</a></li>
 				<li><a href="#">Artists</a></li>
 				<li><a href="#">Bronwyn Douglas</a></li>
 			</ul>
-		</section>
+		</div>
 	</header>
 	<div id="main">	<!-- Page is currently a rough outline of the final product, it will be made more like the comp pages in future -->
 		<h2>Bronwyn Douglas - Vocal (Soprano)</h2>
@@ -93,16 +93,16 @@
    		<div class="footerline"></div>	<!-- Line for the top of the footer -->
 	   	<div class="container">
 	   		<h6 class="footer-title">OUR SPONSORS</h6>
-	   		<img src="Sponor Image - Resized/townsville_city_council_blue.jpg" height="100px" width="100px">
+	   		<img src="sponsor_images_resized/townsville_city_council_blue.jpg" height="100px" width="100px">
 		    <section class="sponsors slider">	<!-- The following is from a JS example -->
-				<div class="slide"><img src="Sponor Image - Resized/acvc.png"></div>
-	    		<div class="slide"><img src="Sponor Image - Resized/bunnings.png"></div>
-	    		<div class="slide"><img src="Sponor Image - Resized/signs_of_excellence.png"></div>
-	    		<div class="slide"><img src="Sponor Image - Resized/afcm.png"></div>
-	    		<div class="slide"><img src="Sponor Image - Resized/groovy_graphics.png"></div>
-	    		<div class="slide"><img src="Sponor Image - Resized/keyboard_shop.png"></div>
-	    		<div class="slide"><img src="Sponor Image - Resized/kaptiv_media.png"></div>
-	    		<div class="slide"><img src="Sponor Image - Resized/cowboys_league_club.png"></div>
+				<div class="slide"><img src="sponsor_images_resized/acvc.png" height="100px" width="154px" alt="Australian Concert and Vocal Competition Logo"></div>
+	    		<div class="slide"><img src="sponsor_images_resized/bunnings.png" height="100px" width="154px" alt="Bunnings Warehouse Logo"></div>
+	    		<div class="slide"><img src="sponsor_images_resized/signs_of_excellence.png" height="100px" width="154px" alt="Signs of Excellence Logo"></div>
+	    		<div class="slide"><img src="sponsor_images_resized/afcm.png" height="100px" width="154px" alt="Australian Festival of Chamber Music Logo"></div>
+	    		<div class="slide"><img src="sponsor_images_resized/groovy_graphics.png" height="100px" width="154px" alt="Groovy Graphics Logo"></div>
+	    		<div class="slide"><img src="sponsor_images_resized/keyboard_shop.png" height="100px" width="154px" alt="Keyboard Shop Logo"></div>
+	    		<div class="slide"><img src="sponsor_images_resized/kaptiv_media.png" height="100px" width="154px" alt="Kaptiv Media Logo"></div>
+	    		<div class="slide"><img src="sponsor_images_resized/cowboys_league_club.png" height="100px" width="154px" alt="Cowboys Leagues Club Logo"></div>
 		    </section>		<!-- End of JS example -->
 		</div>	<!-- End of Sponsor Div -->
 		<div id="footer-nav" class="navigation">
@@ -120,7 +120,7 @@
 			</ul>
 		</div>	<!-- End of Footer Nav -->
 		<aside id="copyright">
-			<p id="copyright">©Copyright North Queensland Ensembles Inc. 2017</p>
+			<p id="copyright-text">©Copyright North Queensland Ensembles Inc. 2017</p>
 		</aside>
 		<div class="footerline"></div>	<!-- Line for the top of the footer -->
 	</footer>
