--- a/MILESTONE 2/template.html
+++ b/MILESTONE 2/template.html
@@ -3,10 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>Page Title Here</title>
+	<link href="mainstyles.css" rel="stylesheet" type="text/css">
+	
+	<!-- Carousel -->
+	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<script src="carousel.js" type="text/javascript"></script>
+	<!-- End of Carousel -->
 </head>
 <body>
 	<header>
-		<img id="header-img" src="#" title="Barrier Reef Orchestra" alt="Barrier Reef Orchestra Logo" height="#" width="#">
+		<img id="header-img" src="logos/barrier_reef_orchestra_logo.png" title="Barrier Reef Orchestra" alt="Barrier Reef Orchestra Logo" width="518" height="184">
 		<nav id="main-nav" class="nav">
 			<ul>
 				<li><a href="#">Home</a></li>
@@ -20,32 +29,36 @@
 			</ul>
 		</nav>
 	</header>
-	<div id="container">	<!-- Container is used for pushing footer to the bottom -->
-		<div id="main">
+	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
+		<div id="main-content">
 			<p>Content Would Go Here</p>
 		</div>	<!-- End of Main -->
-		<footer>
+		<div class="push"></div>
+	</div>	<!-- End of Container -->
+	<footer>
 			<div class="footerline"></div> <!-- Line for the top of Footer -->
-			<div id="sponsor-div">
+			<div class="container">
 				<h6 class="footer-title">SPONSORS</h6>
-				<img id="majorsponsor" src="#" title="Townsville City Council" alt="Townsville City Council Logo" height="100px" width="100px">
+				<img id="majorsponsor" src="sponsor_logos/townsville_city_council_blue.png" title="Townsville City Council" alt="Townsville City Council Logo" height="100px" width="100px">
 				<section class="sponsors slider">
-					<div class="slide"><img src="sponsor_images_resized/acvc.png" height="100px" width="154px" alt="Australian Concert and Vocal Competition Logo"></div>
-					<div class="slide"><img src="sponsor_images_resized/bunnings.png" height="100px" width="154px" alt="Bunnings Warehouse Logo"></div>
-					<div class="slide"><img src="sponsor_images_resized/signs_of_excellence.png" height="100px" width="154px" alt="Signs of Excellence Logo"></div>
-					<div class="slide"><img src="sponsor_images_resized/afcm.png" height="100px" width="154px" alt="Australian Festival of Chamber Music Logo"></div>
-					<div class="slide"><img src="sponsor_images_resized/groovy_graphics.png" height="100px" width="154px" alt="Groovy Graphics Logo"></div>
-					<div class="slide"><img src="sponsor_images_resized/keyboard_shop.png" height="100px" width="154px" alt="Keyboard Shop Logo"></div>
-					<div class="slide"><img src="sponsor_images_resized/kaptiv_media.png" height="100px" width="154px" alt="Kaptiv Media Logo"></div>
-					<div class="slide"><img src="sponsor_images_resized/cowboys_league_club.png" height="100px" width="154px" alt="Cowboys Leagues Club Logo"></div>
+					<div class="slide"><img src="sponsor_logos/acvc.png" height="100px" width="154px" alt="Australian Concert and Vocal Competition Logo"></div>
+					<div class="slide"><img src="sponsor_logos/bunnings.png" height="100px" width="154px" alt="Bunnings Warehouse Logo"></div>
+					<div class="slide"><img src="sponsor_logos/signs_of_excellence.png" height="100px" width="154px" alt="Signs of Excellence Logo"></div>
+					<div class="slide"><img src="sponsor_logos/afcm.png" height="100px" width="154px" alt="Australian Festival of Chamber Music Logo"></div>
+					<div class="slide"><img src="sponsor_logos/groovy_graphics.png" height="100px" width="154px" alt="Groovy Graphics Logo"></div>
+					<div class="slide"><img src="sponsor_logos/keyboard_shop.png" height="100px" width="154px" alt="Keyboard Shop Logo"></div>
+					<div class="slide"><img src="sponsor_logos/kaptiv_media.png" height="100px" width="154px" alt="Kaptiv Media Logo"></div>
+					<div class="slide"><img src="sponsor_logos/cowboys_league_club.png" height="100px" width="154px" alt="Cowboys Leagues Club Logo"></div>
 				</section> <!-- End of Sponsor Slider -->
 			</div>	<!-- End of Sponsor div -->
 			<div id="footer-nav" class="nav">
+				<h6 class="footer-title">NAVIGATION</h6>
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">About Us</a></li>
 					<li><a href="#">Our Team</a></li>
 					<li><a href="#">Events</a></li>
+					<li class="buy-tickets"><a href="#">Buy Tickets</a></li>
 					<li><a href="#">Gallery</a></li>
 					<li><a href="#">Newsfeed</a></li>
 					<li><a href="#">Support Us</a></li>
@@ -57,6 +70,5 @@
 			</aside>
 			<div class="footerline"></div> <!-- Line for the bottom of Footer -->
 		</footer>
-	</div>	<!-- End of Container -->
 </body>
 </html>
