Add buttons, try to get it to work

--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -99,11 +99,19 @@
 			</section>	<!-- End of Upcoming Concert -->
 			<section id="facebook">
 				<h2 class="secondary-main">Join Us On Facebook</h2>
-				<div class="fb-page" data-href="https://www.facebook.com/nqorchestra/" data-tabs="timeline" data-width="411" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/nqorchestra/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/nqorchestra/">Barrier Reef Orchestra</a></blockquote></div>
+				<div class="fb-page" data-href="https://www.facebook.com/nqorchestra/" data-tabs="timeline" data-width="411" data-height="1020" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/nqorchestra/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/nqorchestra/">Barrier Reef Orchestra</a></blockquote></div>
 			</section>
-			<section id="home-member-buttons">
-				
-			</section>
+			<section id="home-sign-up">
+				<div class="home-form-buttons">
+					<a href="#"><img src="button_images/become_a_member.png" alt="Become A Member" width="411" height="320"></a>
+				</div>
+				<div class="home-form-buttons">
+					<a href="#"><img src="button_images/become_a_benefactor.png" alt="Become A Benefactor" width="411" height="320"></a>
+				</div>
+				<div class="home-form-buttons">
+					<a href="#"><img src="button_images/join_the_orchestra.png" alt="Apply to Join the Orchestra" width="411" height="320"></a>
+				</div>
+			</section>	<!-- End of Member Buttons -->
 		</div>	<!-- End of Main -->
         <div class="push"></div> <!-- Used to push the footer to create a 'sticky' footer -->
 	</div>	<!-- End of Container -->
