Create class remove-link-lines

--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -49,27 +49,33 @@
 				<h2>Announcements</h2>
 				<div class="announcement-box" id="announce1">
 					<h3 class="announcement-title">SEPTEMBER NEWSLETTER</h3>
-					<p class="announcement-info">Topics:</p>
-					<ul class="announcement-info">
-						<li>President's Message</li>
-						<li>Life Members Announced</li>
-						<li>Conducting Workshop</li>
-					</ul>
-					<a><div class="read-more-button">
+					<section class="announcement-info-box">
+						<p class="announcement-info">Topics:</p>
+						<ul class="announcement-info">
+							<li>President's Message</li>
+							<li>Life Members Announced</li>
+							<li>Conducting Workshop</li>
+						</ul>
+					</section>	<!-- End of Info Box -->
+					<a class="remove-link-lines"><div class="read-more-button">
 						<p class="read-more-text">Go To Announcement</p>
 					</div></a>
 				</div>
 				<div class="announcement-box" id="announce2">
 					<h3 class="announcement-title">NOVEMBER REHEARSAL TIMES</h3>
-					<p class="announcement-info"></p>
-					<a><div class="read-more-button">
+					<section class="announcement-info-box">
+						<p class="announcement-info">Some Stuff</p>
+					</section>
+					<a class="remove-link-lines"><div class="read-more-button">
 						<p class="read-more-text">Go To Announcement</p>
 					</div></a>
 				</div>
 				<div class="announcement-box" id="announce3">
 					<h3 class="announcement-title">NOTICE OF AGM</h3>
-					<p class="announcement-info"></p>
-					<a><div class="read-more-button">
+					<section class="announcement-info-box">
+						<p class="announcement-info">Some stuff</p>
+					</section>
+					<a class="remove-link-lines"><div class="read-more-button">
 						<p class="read-more-text">Go To Announcement</p>
 					</div></a>
 				</div>
@@ -96,10 +102,10 @@
 						</ul>
 					</section>	<!-- End of Special Guests -->
 				</div>
-				<a href="google.com" ><div id="next-con-learn-more">
+				<a class="remove-link-lines" href="google.com" ><div id="next-con-learn-more">
 					<p>LEARN MORE</p>
 					</div></a>
-				<a><div id="next-con-book-now">
+				<a class="remove-link-lines"><div id="next-con-book-now">
 					<p>BOOK NOW</p>
 				</div></a>
 			</section>	<!-- End of Upcoming Concert -->
@@ -129,7 +135,7 @@
 						<h3 id="home-artist-name">Bronwyn Douglas</h3>
 						<p>Bronwyn graduated with a Masters in Operatic Performance from the Queensland Conservatorium Griffith University in 2014, also receiving an award for academic excellence and the Wagner Society in Queensland Encouragement Award. She attended the Lisa Gasteen National Opera School from 2013-2015 and the Mediterranean Opera Summer Program held in Caltagirone, Sicily in 2014...</p>
 					</div>
-					<a href="ARTISTPAGE"><div id="home-go-to-artist">
+					<a class="remove-link-lines" href="ARTISTPAGE"><div id="home-go-to-artist">
 						<p>Click Here to go to Bronwyn's Page</p>
 					</div></a> 
 				</section>	<!-- End of Featured Artist -->
