Update announcements, Add expiry

--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -48,15 +48,13 @@
 			<section id="announcements">
 				<h2>Announcements</h2>
 				<div class="announcement-box" id="announce1">
-					<h3 class="announcement-title">SEPTEMBER NEWSLETTER</h3>
+					<h3 class="announcement-title">AUGUST NEWSLETTER</h3>
 					<section class="announcement-info-box">
-						<p class="announcement-info">Topics:</p>
-						<ul class="announcement-info">
-							<li>President's Message</li>
-							<li>Life Members Announced</li>
-							<li>Conducting Workshop</li>
-						</ul>
+						<p class="announcement-info">The president Andrew Ryder discusses the Orchestra's recent success, the new life members and their impact on the Orchestra, and the conducting workshop hosted by Raymond Yong.</p>
 					</section>	<!-- End of Info Box -->
+					<aside class="expiry-date">
+						<p>Expires: 31/08/20??</p>
+					</aside>
 					<a class="remove-link-lines"><div class="read-more-button">
 						<p class="read-more-text">Go To Announcement</p>
 					</div></a>
@@ -64,8 +62,11 @@
 				<div class="announcement-box" id="announce2">
 					<h3 class="announcement-title">NOVEMBER REHEARSAL TIMES</h3>
 					<section class="announcement-info-box">
-						<p class="announcement-info">Some Stuff</p>
+						<p class="announcement-info">The current planned rehearsal times for the Novemeber concert are now released. The current plan is to have a signle September rehearsal followed by several October rehearsals. Click below for the full details.</p>
 					</section>
+					<aside class="expiry-date">
+						<p>Expires: 30/11/20??</p>
+					</aside>
 					<a class="remove-link-lines"><div class="read-more-button">
 						<p class="read-more-text">Go To Announcement</p>
 					</div></a>
@@ -73,8 +74,11 @@
 				<div class="announcement-box" id="announce3">
 					<h3 class="announcement-title">NOTICE OF AGM</h3>
 					<section class="announcement-info-box">
-						<p class="announcement-info">Some stuff</p>
+						<p class="announcement-info">All members are advised that the Annual General Meeting (AGM), will take place at Pimlico State High School Performing Arts Building, Fulham Road, Pimlico on Sunday 17th of May at 2pm. All members are welcome.</p>
 					</section>
+					<aside class="expiry-date">
+						<p>Expires: 30/09/20??</p>
+					</aside>
 					<a class="remove-link-lines"><div class="read-more-button">
 						<p class="read-more-text">Go To Announcement</p>
 					</div></a>
