Move home page styling into homestyles, Create contact_us using template, Change upcoming concert button to ticketshop image

--- a/MILESTONE 2/contact_us.html
+++ b/MILESTONE 2/contact_us.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Page Title Here</title>
+	<title>Contact Us - Barrier Reef Orchestra</title>
 	<link href="mainstyles.css" rel="stylesheet" type="text/css">
 	
 	<!-- Carousel -->
