--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -4,11 +4,8 @@
 	<meta charset="utf-8">
 	<title>Barrier Reef Orchestra - Home</title>
 	
-	<!-- Fonts PT Serif & PT Sans -->
-	
-	<!-- End of Fonts -->
-	
 	<link href="mainstyles.css" rel="stylesheet" type="text/css">
+	<link href="homestyles.css" rel="stylesheet" type="text/css">
 	
 	<!-- Carousel -->
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
@@ -39,7 +36,6 @@
 				<li><a href="#">Newsfeed</a></li>
 				<li><a href="#">Support Us</a></li>
 				<li><a href="#">Contact Us</a></li>
-				<li><a href="#">Get Tickets</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -109,9 +105,7 @@
 				<a class="remove-link-lines" href="google.com" ><div id="next-con-learn-more">
 					<p>LEARN MORE</p>
 					</div></a>
-				<a class="remove-link-lines"><div id="next-con-book-now">
-					<p>BOOK NOW</p>
-				</div></a>
+				<img src="button_images/ticket_shop.png" class="ticketShop" alt="Tickets Available at Ticketshop - Riverway Art Centre / Townsville Civic Theatre" title="TicketShop" width="366" height="70">
 			</section>	<!-- End of Upcoming Concert -->
 			<div id="second-col-set">
 				<section id="facebook">
@@ -164,7 +158,7 @@
 				</section> <!-- End of Sponsor Slider -->
 			</div>	<!-- End of Sponsor div -->
 			<div id="footer-nav" class="nav">
-				<h6 class="footer-title">NAVIGATION</h6>
+				<h6 class="footer-title" id="nav-title">NAVIGATION</h6>
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">About Us</a></li>
@@ -174,7 +168,6 @@
 					<li><a href="#">Newsfeed</a></li>
 					<li><a href="#">Support Us</a></li>
 					<li><a href="#">Contact Us</a></li>
-					<li><a href="">Get Tickets</a></li>
 				</ul>
 			</div> <!-- End of Footer Nav -->
 			<aside id="copyright-bar">
