--- a/MILESTONE 2/contact_us.html
+++ b/MILESTONE 2/contact_us.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Contact Us - Barrier Reef Orchestra</title>
+	
 	<link href="mainstyles.css" rel="stylesheet" type="text/css">
+	<script src="mainscripts.js" type="text/javascript"></script>
 	
 	<!-- Carousel -->
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
@@ -31,7 +33,11 @@
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
-			<p>Content Would Go Here</p>
+		<section id="contact-details">
+			<table>
+				
+			</table>
+		</section>
 		</div>	<!-- End of Main -->
 		<div class="push"></div>
 	</div>	<!-- End of Container -->
