--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -6,6 +6,7 @@
 	
 	<link href="mainstyles.css" rel="stylesheet" type="text/css">
 	<link href="homestyles.css" rel="stylesheet" type="text/css">
+	<script src="mainscripts.js" type="text/javascript"></script>
 	
 	<!-- Carousel -->
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
@@ -15,15 +16,7 @@
 	<script src="carousel.js" type="text/javascript"></script>
 	<!-- End of Carousel -->
 </head>
-<body>
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.9";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
+<body>	
 	<header>
 		<img id="header-img" src="logos/barrier_reef_orchestra_logo.png" title="Barrier Reef Orchestra" alt="Barrier Reef Orchestra Logo" width="518" height="184">
 		<nav id="main-nav" class="nav">
