--- a/MILESTONE 2/template.html
+++ b/MILESTONE 2/template.html
@@ -18,14 +18,14 @@
 		<img id="header-img" src="logos/barrier_reef_orchestra_logo.png" title="Barrier Reef Orchestra" alt="Barrier Reef Orchestra Logo" width="518" height="184">
 		<nav id="main-nav" class="nav">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#">About Us</a></li>
 				<li><a href="#">Our Team</a></li>
 				<li><a href="#">Events</a></li>
 				<li><a href="#">Gallery</a></li>
 				<li><a href="#">Newsfeed</a></li>
 				<li><a href="#">Support Us</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="contact_us.html">Contact Us</a></li>
 			</ul>
 		</nav>
 	</header>
