Add final styles to contact_us

--- a/MILESTONE 2/contact_us.html
+++ b/MILESTONE 2/contact_us.html
@@ -71,12 +71,12 @@
 		<section id="FAQ">
 			<h2>FAQ (Frequently Asked Questions)</h2>
 			<aside class="question-and-answer">
-				<h3>Where can I see the upcoming concert?</h3>
-				<p>The upcoming concert page can be found <a href="#"><span class="emphasis">here</span></a>.</p>
+				<h3>Where can I find the upcoming event's information?</h3>
+				<p>The upcoming event page can be found <a href="#"><span class="emphasis">here</span></a>.</p>
 			</aside>
 			<aside class="question-and-answer">
-				<h3>How can I buy a ticket for the upcoming concert?</h3>
-				<p>Tickets for Barrier Reef Orchestra concerts can be bought at the TicketShop at the Townsville Civic Theatre or Riverway Arts Centre.</p>
+				<h3>How can I buy a ticket for the upcoming event?</h3>
+				<p>Tickets for Barrier Reef Orchestra events can be bought at the TicketShop at the Townsville Civic Theatre or Riverway Arts Centre.</p>
 			</aside>
 			<aside class="question-and-answer">
 				<h3>How do I become a member?</h3>
