--- a/MILESTONE 2/contact_us.html
+++ b/MILESTONE 2/contact_us.html
@@ -22,13 +22,13 @@
 		<nav id="main-nav" class="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="#">About Us</a></li>
+				<li><a href="about_us.html">About Us</a></li>
 				<li><a href="#">Our Team</a></li>
-				<li><a href="#">Events</a></li>
+				<li><a href="events.html">Events</a></li>
 				<li><a href="#">Gallery</a></li>
-				<li><a href="#">Newsfeed</a></li>
-				<li><a href="#">Support Us</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="newsfeed.html">Newsfeed</a></li>
+				<li><a href="support_us.html">Support Us</a></li>
+				<li><a href="contact_us.html">Contact Us</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -113,14 +113,14 @@
 			<div id="footer-nav" class="nav">
 				<h6 class="footer-title" id="nav-title">NAVIGATION</h6>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About Us</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about_us.html">About Us</a></li>
 					<li><a href="#">Our Team</a></li>
-					<li><a href="#">Events</a></li>
+					<li><a href="events.html">Events</a></li>
 					<li><a href="#">Gallery</a></li>
-					<li><a href="#">Newsfeed</a></li>
-					<li><a href="#">Support Us</a></li>
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="newsfeed.html">Newsfeed</a></li>
+					<li><a href="support_us.html">Support Us</a></li>
+					<li><a href="contact_us.html">Contact Us</a></li>
 				</ul>
 			</div> <!-- End of Footer Nav -->
 			<aside id="copyright-bar">
