--- a/MILESTONE 2/artists.html
+++ b/MILESTONE 2/artists.html
@@ -29,6 +29,12 @@
 				<li><a href="contact_us.html">Contact Us</a></li>
 			</ul>
 		</nav>
+		<nav id="breadcrumb">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li>Our Team - Artists</li>
+			</ul>
+		</nav>
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
