Finish form styling, Add content to support_us, Add basic styling to support_us

--- a/MILESTONE 2/support_us.html
+++ b/MILESTONE 2/support_us.html
@@ -40,9 +40,39 @@
 		<div id="main-content">
 			<section id="support-options">
 			<h2>Methods To Support Us</h2>
-				<div id="membership">
-					<h3>Becoming A Member</h3>
-					<p></p>
+				<div id="membership" class="support-option-div">
+					<h3>Become A Member</h3>
+					<p>Support the Orchestra by donating a set amount of money to become a member.</p>
+					<h4>Membership Costs</h4>
+					<ul>
+						<li>Adult: $30</li>
+						<li>Family: $60</li>
+						<li>Full time Student: $15</li>
+						<li>Under 18: $15</li>
+						<li>Concession: $15</li>				
+					</ul>
+					<button type="button">Click Here for PDF Membership Form</button>
+					<button type="button">Click Here for Online Membership Form</button>
+				</div>
+				<div id="benefactors" class="support-option-div">
+					<h3>Become a Benefactor</h3>
+					<p>A donation of $200 or more will allow anyone to become a benefactor of the Orchestra.</p>
+					<h4>The benefits of being a benefactor:</h4>
+					<ul>
+						<li>Have your name put into the Benefactors roll for twelve months</li>
+						<li>Receive two complimentary tickets to our next concert</li>
+						<li>Receive updates on the Orchestra via our newsletter</li>
+						<li>Be a guest at our annual Season's Launch function.</li>
+					</ul>
+					<p>If submitting using the PDF form, mail it to the <strong>PO Box 576 Townsville 4810</strong>, and make cheques payable to <strong>North Queensland Ensembles Inc.</strong> or Email it to brotownsville@gmail.com and pay direct debit to <strong>BSB 034 22 Account no. 173922</strong>.</p>
+					<button type="button">Click Here for PDF Form</button>
+					<button type="button">Click Here for Online Form</button>
+				</div>
+				<div id="player" class="support-option-div">
+					<h3>Join the Orchestra</h3>
+					<p>As a community based Orchestra we are always looking for new members of the community to join us. Whether it be as musicians or fundraisers, etc.</p>
+					<button type="button">Click Here for PDF From</button>
+					<button>Click Here for Online Form</button>
 				</div>
 			</section>
 		</div>	<!-- End of Main -->
