Finish support_us, Add breadcrumb to membership form

--- a/MILESTONE 2/membership_form.html
+++ b/MILESTONE 2/membership_form.html
@@ -29,6 +29,13 @@
 				<li><a href="contact_us.html">Contact Us</a></li>
 			</ul>
 		</nav>
+		<nav id="breadcrumb">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="support_us.html">Support Us</a></li>
+				<li>Memebership Form</li>
+			</ul>
+		</nav>
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
@@ -52,7 +59,7 @@
 					<label for="Renewal Membership" class="radioLabel">Renewal Membership</label><br/>
 
 
-					<label id="memberType" name="memberType"><h3 class="subhead">Type of Membership</h3></label><br>
+					<h3 class="subhead">Type of Membership</h3><br>
 					<input type="radio" id="studentMember" name="memberType" for="memberType" value="Student">
 					<label for="studentMember" class="radioLabel">Student</label>
 					<input type="radio" id="adultMember" name="memberType" for="memberType" value="Adult">
