--- a/MILESTONE 2/support_us.html
+++ b/MILESTONE 2/support_us.html
@@ -41,7 +41,7 @@
 			<section id="support-options">
 			<h2>Methods To Support Us</h2>
 				<div id="membership" class="support-option-div">
-					<h3>Become A Member</h3>
+					<h3>Become a Member</h3>
 					<p>Support the Orchestra by donating a set amount of money to become a member.</p>
 					<h4>Membership Costs</h4>
 					<ul>
@@ -51,29 +51,39 @@
 						<li>Under 18: $15</li>
 						<li>Concession: $15</li>				
 					</ul>
-					<button type="button">Click Here for PDF Membership Form</button>
-					<button type="button">Click Here for Online Membership Form</button>
+					<div class="form-btns">
+						<a href=""><button type="button" class="form-btn top-btn">Click Here for PDF Form</button></a>
+						<a href="membership_form.html"><button type="button" class="form-btn">Click Here for Online Form</button></a>
+					</div>
 				</div>
 				<div id="benefactors" class="support-option-div">
 					<h3>Become a Benefactor</h3>
 					<p>A donation of $200 or more will allow anyone to become a benefactor of the Orchestra.</p>
-					<h4>The benefits of being a benefactor:</h4>
-					<ul>
-						<li>Have your name put into the Benefactors roll for twelve months</li>
-						<li>Receive two complimentary tickets to our next concert</li>
-						<li>Receive updates on the Orchestra via our newsletter</li>
-						<li>Be a guest at our annual Season's Launch function.</li>
-					</ul>
-					<p>If submitting using the PDF form, mail it to the <strong>PO Box 576 Townsville 4810</strong>, and make cheques payable to <strong>North Queensland Ensembles Inc.</strong> or Email it to brotownsville@gmail.com and pay direct debit to <strong>BSB 034 22 Account no. 173922</strong>.</p>
-					<button type="button">Click Here for PDF Form</button>
-					<button type="button">Click Here for Online Form</button>
+					<h4>Benefactor Perks:</h4>
+					<div class="center-list">
+						<ul>
+							<li>Name on the benefactors roll for twelve months</li>
+							<li>Two tickets to our next event</li>
+							<li>Updates via our newsletter</li>
+						</ul>
+					</div>
+					<div class="form-btns">
+						<button type="button" class="form-btn top-btn">Click Here for PDF Form</button>
+						<button type="button" class="form-btn">Click Here for Online Form</button>
+					</div>
 				</div>
 				<div id="player" class="support-option-div">
 					<h3>Join the Orchestra</h3>
-					<p>As a community based Orchestra we are always looking for new members of the community to join us. Whether it be as musicians or fundraisers, etc.</p>
-					<button type="button">Click Here for PDF From</button>
-					<button>Click Here for Online Form</button>
+					<p>As a community based Orchestra we are always looking for new members of the community to join us. We take community members on as musicians, fundraisers, and many other positions. If you feel that a position you could fill is not on the form please contact us via <strong><a href="mailto:brotownsville@gmail.com">brotownsville@gmail.com</a></strong> and let us know how you would like to help.</p>
+					<div class="form-btns">
+						<button type="button" class="form-btn top-btn">Click Here for PDF From</button>
+						<button type="button" class="form-btn">Click Here for Online Form</button>
+					</div>
 				</div>
+				<aside>
+					<h4>ABOUT PDF FORMS</h4>
+					<p>If filling out the PDF version of a form please submit it by mail to <strong>PO Box 576 Townsville 4810</strong> or email the form to us at <strong><a href="mailto:brotownsville@gmail.com">brotownsville@gmail.com</a></strong>. For PDF form payments please make cheques payable to <strong>North Queensland Ensembles Inc.</strong> or pay by direct debit to <strong>BSB 034 222 Account no. 173922</strong>. If you have any questions contact Simon McConnell via <a href="mailto:mcconnellgray@optusnet.com.au">mcconnellgray@optusnet.com.au</a></p>
+				</aside>
 			</section>
 		</div>	<!-- End of Main -->
 		<div class="push"></div>
